demo-app.yaml
# demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-container
        image: nginx:alpine # Using a simple, standard image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service # <- This is the name we will use in the VirtualService
  namespace: default
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 80
